2006-10-09  Emmanuel Dreyfus  <manu@netbsd.org>
	* src/racoon/isakmp_unity.c: correctly check read() return (Coverity)

2006-10-06  Emmanuel Dreyfus  <manu@netbsd.org>
	From Tomoyuki Okazaki <okazaki@kick.gr.jp>
	* configure.ac src/libipsec/pfkey_dump.c
	  src/racoon/{algorithm.c|algorithm.h|cftoken.l|crypto_openssl.c}
	  src/racoon/{crypto_openssl.h|eaytest.c|ipsec_doi.c|ipsec_doi.h}
	  src/racoon/{oakley.h|pfkey.c|racoon.conf.5|strnames.c}
	  src/setkey/{setkey.8|test-pfkey.c|token.l}: Camelia cipher 
	  support (RFC 4312)

2006-10-03  Emmanuel Dreyfus  <manu@netbsd.org>
	* src/racoon/admin.c: fix endianness issue introduced yesterday

2006-10-03  Yvan Vanhullebus  <vanhu@netasq.com>
	* src/racoon/{remoteconf.h|sainfo.h}: Added remoteid/ph1id values.
	* src/racoon/{handler.c|isakmp_quick.c|pfkey.c|sainfo.c}: Uses
	  remoteid/ph1id values.
	* src/racoon/{cfparse.y|cftoken.l}: Parses remoteid/ph1id values.
	* src/racoon/racoon.conf.5: Added remoteid/ph1id syntax.

2006-10-02  Emmanuel Dreyfus  <manu@netbsd.org>
	* src/racoon/socketmisc.c: don't use NULL pointer (Coverity)
	* src/racoon/racoonctl.c: don't use NULL pointer (Coverity)
	* src/racoon/proposal.c: don't use NULL pointer (Coverity)
	* src/racoon/pfkey.c: don't use NULL pointer (Coverity)
	* src/racoon/ipsec_doi.c: don't use NULL pointer (Coverity)
	* src/racoon/isakmp.c: don't use NULL pointer (Coverity)
	* src/racoon/oakley.c: don't use NULL pointer (Coverity)
	* src/racoon/admin.c: avoid reusing free'd pointer (Coverity)
	* src/racoon/{admin.c|sockmisc.c}: Fix memory leak (Coverity), refactor
	  the code to use port get/set function
	* src/racoon/admin.c: fix memory leak (Coverity)
	* src/racoon/algorithm.c: fix array overrun (Coverity)
	* src/racoon/isakmp_ident.c: Remove dead code (Coverity)
	* src/racoon/isakmp_inf.c: Check for NULL pointer (Coverity)
	* src/racoon/isakmp_base.c:  avoid reusing free'd pointer (Coverity)
	
2006-10-01  Emmanuel Dreyfus  <manu@netbsd.org>